--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "prettier": "^2.4.1"
   },
   "homepage": "https://github.com/Austionian/blog.r00ks#readme",
