--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "version": "0.1.0",
   "author": "Austin Rooks <austin@r00ks.io>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/Austionian/blog.r00ks/issues"
   },
   "dependencies": {
+    "@agentofuser/rehype-section": "^1.0.5",
     "@emotion/styled": "^11.6.0",
     "@fontsource/monofett": "^4.5.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -15,45 +16,48 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@makotot/ghostui": "^2.0.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^12.0.8",
     "@types/react-helmet": "^6.1.5",
+    "date-fns": "^2.28.0",
     "framer-motion": "^5.5.6",
-    "gatsby": "^4.4.0",
-    "gatsby-plugin-anchor-links": "^1.2.1",
-    "gatsby-plugin-feed": "^4.4.0",
-    "gatsby-plugin-gatsby-cloud": "^4.4.0",
-    "gatsby-plugin-google-analytics": "^4.4.0",
-    "gatsby-plugin-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^4.4.0",
-    "gatsby-plugin-offline": "^5.4.0",
-    "gatsby-plugin-react-helmet": "^5.4.0",
-    "gatsby-plugin-react-svg": "^3.1.0",
-    "gatsby-plugin-sharp": "^4.4.0",
-    "gatsby-remark-autolink-headers": "^5.4.0",
-    "gatsby-remark-copy-linked-files": "^5.4.0",
-    "gatsby-remark-images": "^6.4.0",
-    "gatsby-remark-prismjs": "^6.4.0",
-    "gatsby-remark-responsive-iframe": "^5.4.0",
-    "gatsby-remark-smartypants": "^5.4.0",
-    "gatsby-source-filesystem": "^4.4.0",
-    "gatsby-transformer-remark": "^5.4.0",
-    "gatsby-transformer-sharp": "^4.4.0",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
+    "next": "^12.0.8",
+    "path": "^0.12.7",
     "prismjs": "^1.26.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.33.1",
+    "react-markdown": "^7.1.2",
     "react-toggle": "^4.1.2",
+    "rehype": "^12.0.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.0.1",
+    "rehype-stringify": "^9.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-sectionize": "^1.1.1",
+    "remark-slug": "^7.0.1",
+    "remark-toc": "^8.0.1",
     "typeface-merriweather": "1.1.13",
-    "typeface-montserrat": "1.1.13"
+    "typeface-montserrat": "1.1.13",
+    "unified": "^10.1.1",
+    "unist-util-find-after": "^4.0.0",
+    "unist-util-visit-parents": "^5.1.0"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   },
   "homepage": "https://github.com/Austionian/blog.r00ks#readme",
   "keywords": [
-    "gatsby"
+    "nextjs"
   ],
   "license": "0BSD",
   "main": "n/a",
@@ -62,13 +66,8 @@
     "url": "git+https://github.com/Austionian/blog.r00ks.git"
   },
   "scripts": {
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "gatsby develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   }
 }
