--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "framer-motion": "^5.5.6",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
-    "lodash": "^4.17.21",
     "next": "^12.0.8",
     "path": "^0.12.7",
     "prismjs": "^1.26.0",
@@ -32,23 +31,13 @@
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.33.1",
     "react-markdown": "^7.1.2",
-    "react-toggle": "^4.1.2",
     "rehype": "^12.0.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.0.1",
-    "rehype-stringify": "^9.0.2",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
-    "remark-parse": "^10.0.1",
-    "remark-rehype": "^10.1.0",
-    "remark-sectionize": "^1.1.1",
-    "remark-slug": "^7.0.1",
-    "remark-toc": "^8.0.1",
     "typeface-merriweather": "1.1.13",
-    "typeface-montserrat": "1.1.13",
-    "unified": "^10.1.1",
-    "unist-util-find-after": "^4.0.0",
-    "unist-util-visit-parents": "^5.1.0"
+    "typeface-montserrat": "1.1.13"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
