--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next/mdx": "^12.0.8",
     "@types/react-helmet": "^6.1.5",
     "date-fns": "^2.28.0",
+    "feed": "^4.2.2",
     "framer-motion": "^5.5.6",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
